--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -70,8 +70,8 @@
 }
 
 .nav-item a:hover {
-  color: #c74438;
-  background: linear-gradient(135deg, rgba(0,0,0,0) 0%,rgba(75,20,20,0.65) 100%);
+  color: #000;
+  background: #fff;
 }
 
 /* Site Wrapper - Everything that isn't navigation */
