--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -30,7 +30,105 @@
   max-width: 600px;
 }
 
+.pi-container{
+  width:100px;
+  margin:auto;
+  position:relative;
+}
 
+.profileimage {
+  border-radius: 50%;
+  display: block;
+  margin: 20px auto;
+  width: 100px;
+  height: 100px;
+}
+
+.profileimage-sm {
+    border-radius: 50%;
+    display: block;
+    width: 40px;
+    height: 40px;
+    float: left;
+    vertical-align: middle;
+}
+
+.img-save-overlay {
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  top: 0;
+  left: 0;
+  background: rgba(255, 255, 255, 0.6);
+}
+
+li.profile {
+  padding: 20px;
+  border-bottom: 1px solid #999;
+
+}
+
+li.profile span {
+    color: #fff;
+    vertical-align: middle;
+    display: inline-block;
+    margin-top: 10px;
+    font-size: 1.2em;
+}
+
+/** Profile Image Input styling **/
+
+.inputfile {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+
+.inputfile + label {
+    text-overflow: ellipsis;
+    cursor: pointer;
+    display: block;
+    margin: 0px auto !important;
+    max-width: 200px;
+/*    max-width: 80%;
+    font-size: 1.25rem;
+    font-weight: 700;
+    white-space: nowrap;
+    overflow: hidden;
+    padding: 0.625rem 1.25rem;*/
+}
+
+.inputfile:focus + label,
+.inputfile.has-focus + label {
+    outline: 1px dotted #000;
+    outline: -webkit-focus-ring-color auto 5px;
+}
+
+.inputfile + label:hover {
+    color: #333;
+    background-color: #ebebeb;
+    border-color: #adadad;
+}
+
+.inputfile + label * {
+    pointer-events: none; 
+    /* in case of FastClick lib use */
+}
+
+.inputfile + label {
+    color: #fff;
+    background-color: #000;
+    border: 3px solid #000;
+}
+
+.activeButInvisible {
+  height: 0px;
+  width: 0px;
+  overflow: hidden;
+}
 /*** NAVBAR SIDE SWIPE CSS **/
 /* Navigation Menu - Background */
 .navigation {
@@ -62,7 +160,7 @@
   /* non-critical appearance styles */
   display: block;
   padding: 1em;
-  background: linear-gradient(135deg, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+  background: #000;
   color: white;
   font-size: 1.2em;
   text-decoration: none;
@@ -119,7 +217,6 @@ label[for="nav-trigger"] {
 
 .nav-trigger:checked ~ .site-wrap {
   left: 200px;
-  box-shadow: 0 0 5px 5px rgba(0,0,0,0.5);
 }
 
 body {
