--- a/client/components/alerts/alerts.css
+++ b/client/components/alerts/alerts.css
@@ -77,8 +77,8 @@ div.row.alert div.alertContainer h4 {
 	.uil-ball-css {
 	  background: none;
 	  position: relative;
-	  width: 200px;
-	  height: 200px;
+	  width: 100px;
+	  height: 100px;
 	  margin: auto;
 	}
 	width: 100%;
@@ -444,7 +444,22 @@ div.row.alert div.alertContainer h4 {
 	  }
 	}
 	.uil-ball-css > div {
-	  position: absolute;
+    position: absolute;
+    top: 40px;
+    left: 60px;
+    width: 20px;
+    height: 20px;
+    margin-top: -55px;
+    margin-left: -20px;
+    border-radius: 20px;
+    background: #000000;
+    -ms-animation: uil-ball-anim0 1s linear infinite;
+    -moz-animation: uil-ball-anim0 1s linear infinite;
+    -webkit-animation: uil-ball-anim0 1s linear infinite;
+    -o-animation: uil-ball-anim0 1s linear infinite;
+    animation: uil-ball-anim0 1s linear infinite;
+
+	/*  position: absolute;
 	  top: 160px;
 	  left: 100px;
 	  width: 40px;
@@ -457,6 +472,6 @@ div.row.alert div.alertContainer h4 {
 	  -moz-animation: uil-ball-anim0 1s linear infinite;
 	  -webkit-animation: uil-ball-anim0 1s linear infinite;
 	  -o-animation: uil-ball-anim0 1s linear infinite;
-	  animation: uil-ball-anim0 1s linear infinite;
+	  animation: uil-ball-anim0 1s linear infinite;*/
 	}
 /*** END LAODING ICON */
