--- a/client/components/header/header.css
+++ b/client/components/header/header.css
@@ -1,8 +1,18 @@
 header {
 	height: 60px;
 	padding: 13px 10px 20px 60px;
+    width: 100%;
+    background: #fff;
+    position: fixed;
+    z-index: 40;
+    margin-top: -60px;
 }
 
 header h1 {
 	margin: 0px;
+}
+
+.ng-scope {
+	padding-bottom: 80px;
+    margin-top: 60px;
 }
