--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,5 +1,8 @@
 <ul class="navigation">
-    <li class="nav-item" ng-show="nav.isAdmin()" ng-class="{active: nav.isActive('/admin')}"><a href="/admin" ng-click="nav.common.toggleMenu()"><span class="glyphicon glyphicon-education"></span>&nbsp;&nbsp;Admin</a></li>
+	<li class="profile" ng-show="nav.isLoggedIn()" >
+		<img ng-src="{{'data:image/jpg;base64,' + nav.Auth.getCurrentUser().profileimage }}" class="profileimage-sm" />&nbsp;&nbsp;<span>{{nav.Auth.getCurrentUser().name}}</span>
+	</li>
+    <li class="nav-item" ng-show="nav.isAdmin()" ng-class="{active: nav.isActive('/admin')}"><a href="/admin" ng-click="nav.common.toggleMenu()"><span class="glyphicon glyphicon-bookmark"></span>&nbsp;&nbsp;Admin</a></li>
     <li class="nav-item" ng-hide="nav.isLoggedIn()" ng-class="{active: nav.isActive('/')}"><a href="/" ng-click="nav.common.toggleMenu()"><span class="glyphicon glyphicon-home"></span>&nbsp;&nbsp;Home</a></li>
     <li class="nav-item" ng-show="nav.isLoggedIn()" ng-class="{active: nav.isActive('/userhome')}"><a href="/userhome" ng-click="nav.common.toggleMenu()"><span class="glyphicon glyphicon-home"></span>&nbsp;&nbsp;Home</a></li>
     <li class="nav-item" ng-hide="nav.isLoggedIn()" ng-class="{active: nav.isActive('/signup')}"><a href="/signup" ng-click="nav.common.toggleMenu()"><span class="glyphicon glyphicon-pencil"></span>&nbsp;&nbsp;Register</a></li>
